Added Atmospheric Utils. Fixed issue with MagneticResult fields being null.  Added temperature and velocity conversions to MathUtil.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,8 @@ set(HEADER_FILES
         ${PROJECT_SOURCE_DIR}/include/MathTools/Polynomial.h
         ${PROJECT_SOURCE_DIR}/include/MathTools/LegendreUtil.h
         ${PROJECT_SOURCE_DIR}/include/MathTools/MathUtil.h
-        ${PROJECT_SOURCE_DIR}/include/GeoTools/GeoTile.h)
+        ${PROJECT_SOURCE_DIR}/include/GeoTools/GeoTile.h
+        ${PROJECT_SOURCE_DIR}/include/GeoTools/AtmosUtil.h)
 
 # Add Source Files
 add_library(aviationcalc SHARED
@@ -33,7 +34,8 @@ add_library(aviationcalc SHARED
         MathTools/LegendreUtil.cpp
         MathTools/Polynomial.cpp
         GeoTools/GeoTile.cpp
-        GeoTools/MagneticTools/MagneticTile.cpp)
+        GeoTools/MagneticTools/MagneticTile.cpp
+        GeoTools/AtmosUtil.cpp)
 
 # Set Include Folders
 target_include_directories(aviationcalc PUBLIC
