--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -9,8 +9,11 @@ conan_basic_setup()
 add_executable(test_geopoint test_geopoint.cpp)
 target_link_libraries(test_geopoint ${CONAN_LIBS})
 
+add_executable(test_atmos test_atmos.cpp)
+target_link_libraries(test_atmos ${CONAN_LIBS})
+
 # CTest is a testing tool that can be used to test your project.
-# enable_testing()
-# add_test(NAME example
-#          WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-#          COMMAND example)
+enable_testing()
+add_test(NAME test_atmos
+         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+         COMMAND test_atmos)
