--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,22 @@ include(FetchContent)
 include(GenerateExportHeader)
 
 # Conan
+# Download if conan.cmake is not found
+if (NOT EXISTS "${CMAKE_BINARY_DIR}/conanbuildinfo.cmake" OR NOT EXISTS "${CMAKE_BINARY_DIR}/conan_paths.cmake")
+    if (NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+        message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+        file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/v0.16.1/conan.cmake"
+            "${CMAKE_BINARY_DIR}/conan.cmake"
+            EXPECTED_HASH SHA256=396e16d0f5eabdc6a14afddbcfff62a54a7ee75c6da23f32f7a31bc85db23484
+            TLS_VERIFY ON)
+    endif()
+
+    include (${CMAKE_BINARY_DIR}/conan.cmake)
+
+    conan_cmake_autodetect(conan_settings)
+    conan_cmake_install(PATH_OR_REFERENCE "${CMAKE_SOURCE_DIR}/conanfile.py" SETTINGS ${conan_settings})
+endif()
+
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
