--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -99,8 +99,12 @@ configure_file(${PROJECT_SOURCE_DIR}/packages/nuget/template.nuspec
         )
 
 # Generate .targets file
-configure_file(${PROJECT_SOURCE_DIR}/packages/nuget/template.targets.xml
+configure_file(${PROJECT_SOURCE_DIR}/packages/nuget/native.targets.xml
         ${CMAKE_BINARY_DIR}/nuget/build/native/${NUGET_PACKAGE_NAME}.targets
+        )
+
+configure_file(${PROJECT_SOURCE_DIR}/packages/nuget/netcore.targets.xml
+        ${CMAKE_BINARY_DIR}/nuget/build/netcoreapp3.1/${NUGET_PACKAGE_NAME}.targets
         )
 
 if (WIN32)
