--- a/packages/nuget/template.nuspec
+++ b/packages/nuget/template.nuspec
@@ -12,20 +12,17 @@
     -->
     <description>${CMAKE_PROJECT_DESCRIPTION}</description>
     <copyright>None</copyright>
-    <tags>aviationcalc netcoreapp3 Native native net47</tags>
+    <tags>aviationcalc netstandard2 Native native</tags>
     <dependencies>
       <group targetFramework="native" />
-      <group targetFramework=".NETCoreApp3.1" />
-      <group targetFramework="net47" />
+      <group targetFramework="netstandard2.0" />
     </dependencies>
   </metadata>
   <files>
     <file src="build\**" target="build" />
     <file src="runtimes\**" target="runtimes" />
-    <file src="runtimes\native\**" target="lib/netcoreapp3.1" />
-    <file src="runtimes\native\**" target="lib/net47" />
+    <file src="runtimes\native\**" target="lib/netstandard2.0" />
     <file src="lib\native\**" target="lib/native" />
-    <file src="lib\native\**" target="lib/netcoreapp3.1" />
-    <file src="lib\native\**" target="lib/net47" />
+    <file src="lib\native\**" target="lib/netstandard2.0" />
   </files>
 </package>
