--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,12 +105,8 @@ configure_file(${PROJECT_SOURCE_DIR}/packages/nuget/native.targets.xml
         ${CMAKE_BINARY_DIR}/nuget/build/native/${NUGET_PACKAGE_NAME}.targets
         )
 
-configure_file(${PROJECT_SOURCE_DIR}/packages/nuget/netcore.targets.xml
-        ${CMAKE_BINARY_DIR}/nuget/build/netcoreapp3.1/${NUGET_PACKAGE_NAME}.targets
-        )
-
-configure_file(${PROJECT_SOURCE_DIR}/packages/nuget/net.targets.xml
-        ${CMAKE_BINARY_DIR}/nuget/build/net47/${NUGET_PACKAGE_NAME}.targets
+configure_file(${PROJECT_SOURCE_DIR}/packages/nuget/netstandard.targets.xml
+        ${CMAKE_BINARY_DIR}/nuget/build/netstandard2.0/${NUGET_PACKAGE_NAME}.targets
         )
 
 if (WIN32)
