--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -4,7 +4,15 @@ project(PackageTest CXX)
 set(CMAKE_CXX_STANDARD 20)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
+conan_basic_setup(KEEP_RPATHS)
+
+# MacOS RPath
+if (APPLE)
+    set(CMAKE_BUILD_WITH_INSTALL_RPATH 1)
+    set(CMAKE_INSTALL_RPATH "@loader_path")
+endif()
+
+# End MacOS RPath
 
 add_executable(test_geopoint test_geopoint.cpp)
 target_link_libraries(test_geopoint ${CONAN_LIBS})
