--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,8 @@ endif ()
 
 add_subdirectory(src)
 
+add_subdirectory(swig)
+
 add_executable(test_atmos test_package/test_atmos.cpp)
 target_link_libraries(test_atmos aviationcalc)
 
