Added more swig interfaces.

--- a/swig/csharp/CMakeLists.txt
+++ b/swig/csharp/CMakeLists.txt
@@ -7,32 +7,21 @@ set_property(SOURCE tools/boost_gregorian_date.i PROPERTY COMPILE_OPTIONS
 
 # GeoTools
 set_property(SOURCE GeoTools/GeoPoint.i PROPERTY CPLUSPLUS ON)
-set_property(SOURCE GeoTools/GeoPoint.i PROPERTY COMPILE_OPTIONS
-        -namespace AviationCalcUtilNet.GeoTools)
 set_property(SOURCE GeoTools/GeoUtil.i PROPERTY CPLUSPLUS ON)
-set_property(SOURCE GeoTools/GeoUtil.i PROPERTY COMPILE_OPTIONS
-        -namespace AviationCalcUtilNet.GeoTools)
 set_property(SOURCE GeoTools/AtmosUtil.i PROPERTY CPLUSPLUS ON)
-set_property(SOURCE GeoTools/AtmosUtil.i PROPERTY COMPILE_OPTIONS
-        -namespace AviationCalcUtilNet.GeoTools)
 set_property(SOURCE GeoTools/GeoTile.i PROPERTY CPLUSPLUS ON)
-set_property(SOURCE GeoTools/GeoTile.i PROPERTY COMPILE_OPTIONS
-        -namespace AviationCalcUtilNet.GeoTools)
 
 # GeoTools/MagneticTools
 set_property(SOURCE GeoTools/MagneticTools/MagneticFieldElements.i PROPERTY CPLUSPLUS ON)
-set_property(SOURCE GeoTools/MagneticTools/MagneticFieldElements.i PROPERTY COMPILE_OPTIONS
-        -namespace AviationCalcUtilNet.GeoTools.MagneticTools)
 set_property(SOURCE GeoTools/MagneticTools/MagneticModelCoefficients.i PROPERTY CPLUSPLUS ON)
-set_property(SOURCE GeoTools/MagneticTools/MagneticModelCoefficients.i PROPERTY COMPILE_OPTIONS
-        -namespace AviationCalcUtilNet.GeoTools.MagneticTools)
 set_property(SOURCE GeoTools/MagneticTools/MagneticModel.i PROPERTY CPLUSPLUS ON)
-set_property(SOURCE GeoTools/MagneticTools/MagneticModel.i PROPERTY COMPILE_OPTIONS
-        -namespace AviationCalcUtilNet.GeoTools.MagneticTools)
 set_property(SOURCE GeoTools/MagneticTools/MagneticResult.i PROPERTY CPLUSPLUS ON)
-set_property(SOURCE GeoTools/MagneticTools/MagneticResult.i PROPERTY COMPILE_OPTIONS
-        -namespace AviationCalcUtilNet.GeoTools.MagneticTools)
+set_property(SOURCE GeoTools/MagneticTools/MagneticTile.i PROPERTY CPLUSPLUS ON)
+set_property(SOURCE GeoTools/MagneticTools/MagneticUtil.i PROPERTY CPLUSPLUS ON)
 
+# GeoTools/GribTools
+set_property(SOURCE GeoTools/GribTools/GribDataPoint.i PROPERTY CPLUSPLUS ON)
+set_property(SOURCE GeoTools/GribTools/GribTile.i PROPERTY CPLUSPLUS ON)
 
 # Build Bridge Library
 swig_add_library(aviationcalc_netbrg
@@ -49,6 +38,10 @@ swig_add_library(aviationcalc_netbrg
         GeoTools/MagneticTools/MagneticModelCoefficients.i
         GeoTools/MagneticTools/MagneticModel.i
         GeoTools/MagneticTools/MagneticResult.i
+        GeoTools/MagneticTools/MagneticTile.i
+        GeoTools/MagneticTools/MagneticUtil.i
+        GeoTools/GribTools/GribDataPoint.i
+        GeoTools/GribTools/GribTile.i
         )
 
 set_target_properties(aviationcalc_netbrg PROPERTIES
