Fixed conan cache hopefully

--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -61,9 +61,9 @@ jobs:
       - name: Install Curl
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: sudo apt install -y libcurl4-openssl-dev
-      - name: Conan Cache
-        id: conan-caches
-        uses: actions/cache@v3
+      - name: Restore Conan Cache
+        id: cache-conan-restore
+        uses: actions/cache/restore@v3
         with:
           path: $HOME/.conan/data
           key: ${{ runner.os }}-conan-cache
@@ -77,3 +77,9 @@ jobs:
         run: cmake -S . -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.configuration }} -DNUGET_ARCH=${{ matrix.short-os }}-${{ matrix.arch }}
       - name: Build
         run: cmake --build ${{github.workspace}}/build --target aviationcalc
+      - name: Save Conan Cache
+        id: cache-conan-save
+        uses: actions/cache/save@v3
+        with:
+          path: $HOME/.conan/data
+          key: ${{ steps.cache-conan-restore.outputs.cache-primary-key }}
