--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -9,6 +9,7 @@ on:
 env:
   CONAN_USER_HOME: "${{ github.workspace }}/conan/"
   CONAN_USER_HOME_SHORT: "${{ github.workspace }}/conan/short"
+  CONAN_VERBOSE_TRACEBACK: 1
 
 jobs:
   build:
@@ -51,6 +52,9 @@ jobs:
             arch: arm
           - os: macos-latest
             arch: arm64
+          - os: macos-latest
+          - os: ubuntu-latest
+          - configuration: Debug
 
     runs-on: ${{ matrix.os }}
 
