--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -61,10 +61,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.8.2'
       - name: Install Conan
         id: conan
         uses: turtlebrowser/get-conan@main
+        with:
+          version: 1.42.0
       - name: Install Curl
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: sudo apt install -y libcurl4-openssl-dev
