--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -56,6 +56,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - uses: nuget/setup-nuget@v1
+        with:
+          nuget-version: 'latest'
       - name: Install Conan
         id: conan
         uses: turtlebrowser/get-conan@main
@@ -63,6 +66,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: sudo apt install -y libcurl4-openssl-dev
       - name: Conan Cache
+        if: ${{ runner.os != 'windows-latest' }}
         id: cache-conan
         uses: actions/cache@v3
         with:
@@ -82,7 +86,7 @@ jobs:
         if: ${{ matrix.configuration == 'Release' }}
         run: |
           cd ${{ github.workspace }}/out/nuget/${{ matrix.short-os }}-${{ matrix.arch }}
-          dotnet pack --no-build --output .
+          nuget pack .
       - name: Archive Binary Artifacts
         uses: actions/upload-artifact@v3
         with:
