--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -66,7 +66,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: sudo apt install -y libcurl4-openssl-dev
       - name: Conan Cache
-        if: ${{ runner.os != 'windows-latest' }}
+        if: ${{ matrix.os != 'windows-latest' }}
         id: cache-conan
         uses: actions/cache@v3
         with:
